# esp32c3

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
